<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PetTrainer</string>
    <string name="default_email">jccp</string>
    <string name="default_password">jccp</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Please Enter an Email</string>
    <string name="prompt_password">Please Enter A Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="error_invalid_password">Password is required</string>
    <string name="error_field_required">field is required</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="title_activity_pet_list">Pet List</string>
    <string name="title_activity_pet_profile">Pet Profile</string>
    <string name="pet_title">Pet Title</string>
    <string name="action_add_pet">Add Pet</string>
    <string name="action_show_profile">User Profile</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="user_username">Username: </string>
    <string name="user_first_name">First Name: </string>
    <string name="user_username_label">Username: </string>
    <string name="user_first_name_label">First Name: </string>
    <string name="user_last_name_label">Last Name: </string>
    <string name="user_email_label">Email: </string>
    <string name="user_logout_btn">Log Out</string>
    <string name="title_activity_pet_add">PetAddActivity</string>
    <string name="enter_pet_name">Pet\'s Name</string>
    <string name="pet_add_btn_label">Add Pet</string>
    <string name="pet_task_title">Tasks</string>
    <string name="title_activity_task_profile">TaskProfileActivity</string>

    <string name="action_register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="user_password_label">Password:</string>

</resources>
