<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_username_label"
            android:id="@+id/user_username_label" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginLeft="40dp" android:layout_marginTop="40dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_username_label"
            android:id="@+id/user_username"
            android:layout_alignBottom="@+id/user_username_label" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_first_name_label"
            android:id="@+id/user_first_name_label" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginLeft="40dp" android:layout_marginTop="90dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_first_name_label"
            android:id="@+id/user_first_name"
            android:layout_alignBottom="@+id/user_first_name_label" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_last_name_label"
            android:id="@+id/user_last_name_label" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginLeft="40dp" android:layout_marginTop="140dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_last_name_label"
            android:id="@+id/user_last_name"
            android:layout_alignBottom="@+id/user_last_name_label" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email_label"
            android:id="@+id/user_email_label" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginLeft="40dp" android:layout_marginTop="190dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_email_label"
            android:id="@+id/user_email"
            android:layout_alignBottom="@+id/user_email_label" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_logout_btn"
            android:id="@+id/user_logout_btn"
            android:layout_marginTop="75dp"
            android:layout_below="@+id/user_email" android:layout_centerHorizontal="true"></Button>


</RelativeLayout>